Fix openapi
